# django_mail_service

./: pyproject.toml  readme.md
config/: settings.py
mailing/: admin.py  apps.py  models.py  urls.py
mailing/migrations/: 0001_initial.py  0002_mailingsettings.py  0003_messageslogs.py
mailing/templates/mailing/: base.html
