[tool.poetry]
name = "django-mail-service"
version = "0.1.0"
description = ""
authors = ["saysuu <skysaika@yandex.ru>"]
readme = "README.md"
packages = [{include = "django_mail_service"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
psycopg2-binary = "^2.9.6"
pillow = "^10.0.0"
ipython = "^8.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
